--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.0.14"
+    "astro": "^2.0.14",
+    "@astrojs/vue": "^2.0.1",
+    "vue": "^3.2.37"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.35.2",
