--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^8.34.0",
     "unocss": "^0.50.0",
     "unocss-preset-extra": "^0.4.3",
-    "unocss-preset-scrollbar": "^0.2.1"
+    "unocss-preset-scrollbar": "^0.2.1",
+    "unplugin-auto-import": "^0.15.0"
   }
 }
