--- a/package.json
+++ b/package.json
@@ -13,16 +13,22 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.0.14",
-    "@astrojs/vue": "^2.0.1",
-    "vue": "^3.2.37"
+    "@astrojs/solid-js": "^2.1.0",
+    "@astrojs/vue": "^2.1.1",
+    "@unocss/reset": "^0.50.6",
+    "astro": "^2.2.0",
+    "vue": "^3.2.47"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.35.2",
-    "eslint": "^8.34.0",
-    "unocss": "^0.50.0",
-    "unocss-preset-extra": "^0.4.3",
+    "@antfu/eslint-config": "^0.38.4",
+    "@astrojs/image": "^0.16.5",
+    "@astrojs/netlify": "^2.2.0",
+    "@astrojs/node": "^5.1.1",
+    "@astrojs/vercel": "^3.2.2",
+    "eslint": "^8.37.0",
+    "unocss": "^0.50.6",
+    "unocss-preset-extra": "^0.5.0",
     "unocss-preset-scrollbar": "^0.2.1",
-    "unplugin-auto-import": "^0.15.0"
+    "unplugin-auto-import": "^0.15.2"
   }
 }
