--- a/package.json
+++ b/package.json
@@ -25,15 +25,16 @@
     "@astrojs/netlify": "^2.2.2",
     "@astrojs/node": "^5.1.1",
     "@astrojs/sitemap": "^1.2.2",
-    "@astrojs/vercel": "^3.2.3",
+    "@astrojs/vercel": "^3.2.4",
     "@vite-pwa/astro": "^0.0.5",
     "astro-i18next": "1.0.0-beta.21",
     "astro-icon": "^0.8.0",
     "astro-robots-txt": "^0.4.1",
     "eslint": "^8.38.0",
+    "postcss-preset-env": "^8.3.1",
     "unocss": "^0.51.4",
     "unocss-preset-extra": "^0.5.2",
     "unocss-preset-scrollbar": "^0.2.1",
-    "unplugin-auto-import": "^0.15.2"
+    "unplugin-auto-import": "^0.15.3"
   }
 }
