--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "unocss": "^0.51.4",
     "unocss-preset-extra": "^0.5.2",
     "unocss-preset-scrollbar": "^0.2.1",
-    "unplugin-auto-import": "^0.15.3"
+    "unplugin-auto-import": "^0.15.3",
+    "vite-plugin-svg-icons": "^2.0.1"
   }
 }
