--- a/package.json
+++ b/package.json
@@ -9,21 +9,28 @@
     "build": "astro build",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
+    "test": "vitest",
+    "update:deps": "taze -w && pnpm i",
+    "type:check": "vue-tsc --noEmit",
     "preview": "astro preview",
-    "i18n": "astro-i18next generate"
+    "i18n": "astro-i18next generate",
+    "cz": "czg",
+    "commit": "git pull && git add -A && pnpm cz && git push",
+    "preinstall": "npx only-allow pnpm",
+    "postinstall": "npx simple-git-hooks"
   },
   "dependencies": {
     "@astrojs/solid-js": "^2.2.0",
     "@astrojs/vue": "^2.2.1",
-    "@unocss/reset": "^0.53.1",
-    "astro": "^2.6.1",
+    "@unocss/reset": "^0.53.4",
+    "astro": "^2.7.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.39.5",
-    "@astrojs/image": "^0.17.0",
+    "@astrojs/image": "^0.17.1",
     "@astrojs/netlify": "^2.3.0",
-    "@astrojs/node": "^5.2.0",
+    "@astrojs/node": "^5.3.0",
     "@astrojs/sitemap": "^1.3.3",
     "@astrojs/vercel": "^3.5.0",
     "@eiog/eslint-config-ts": "^0.0.1",
@@ -31,22 +38,34 @@
     "astro-i18next": "1.0.0-beta.21",
     "astro-icon": "^0.8.1",
     "astro-robots-txt": "^0.5.0",
-    "eslint": "^8.42.0",
-    "postcss-preset-env": "^8.4.2",
+    "@vitest/ui": "^0.32.0",
+    "@vue/test-utils": "^2.3.2",
+    "commitlint": "^17.6.5",
+    "cz-git": "^1.6.1",
+    "czg": "^1.6.1",
+    "eslint": "^8.43.0",
+    "jsdom": "^22.1.0",
+    "less": "^4.1.3",
+    "lint-staged": "^13.2.2",
+    "postcss-preset-env": "^8.5.1",
+    "sass": "^1.63.3",
+    "simple-git-hooks": "^2.8.1",
+    "taze": "^0.10.2",
     "typescript": "^5.1.3",
-    "unocss": "^0.53.1",
+    "unocss": "^0.53.4",
     "unocss-preset-extra": "^0.5.2",
     "unocss-preset-scrollbar": "^0.2.1",
     "unplugin-auto-import": "^0.16.4",
-    "vite-plugin-svg-icons": "^2.0.1"
+    "vite-plugin-svg-icons": "^2.0.1",
+    "vitest": "^0.32.0",
+    "vue-tsc": "^1.6.5"
   },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
+  "simple-git-hooks": {
+    "pre-commit": "pnpm lint-staged && pnpm type:check"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx,astro}": [
-      "eslint . --fix",
-      "git add"
+    "*.{js,jsx,ts,tsx}": [
+      "pnpm lint:fix"
     ]
   }
 }
