--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,8 +26,10 @@
       ]
     },
     "types": [
+      "vitest/globals",
       "@astrojs/image/client",
-      "vite-plugin-pwa/info"
+      "vite-plugin-pwa/info",
+      "vite-plugin-svg-icons/client"
     ]
   },
   "exclude": [
