--- a/package.json
+++ b/package.json
@@ -20,45 +20,44 @@
     "postinstall": "npx simple-git-hooks"
   },
   "dependencies": {
-    "@astrojs/solid-js": "^2.2.0",
-    "@astrojs/vue": "^2.2.1",
-    "@unocss/reset": "^0.55.0",
-    "astro": "^2.10.7",
+    "@astrojs/solid-js": "^3.0.1",
+    "@astrojs/vue": "^3.0.0",
+    "@unocss/reset": "^0.55.7",
+    "astro": "^3.1.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.40.2",
-    "@astrojs/image": "^0.17.3",
-    "@astrojs/netlify": "^2.6.0",
-    "@astrojs/node": "^5.3.2",
-    "@astrojs/sitemap": "^2.0.1",
-    "@astrojs/vercel": "^3.8.0",
+    "@antfu/eslint-config": "0.43.0-beta.0",
+    "@astrojs/netlify": "^3.0.1",
+    "@astrojs/node": "^6.0.0",
+    "@astrojs/sitemap": "^3.0.0",
+    "@astrojs/vercel": "^5.0.0",
     "@eiog/eslint-config-ts": "^0.0.2",
-    "@vite-pwa/astro": "^0.1.1",
-    "@vitest/ui": "^0.34.1",
+    "@vite-pwa/astro": "^0.1.3",
+    "@vitest/ui": "^0.34.4",
     "@vue/test-utils": "^2.4.1",
     "astro-i18next": "1.0.0-beta.21",
     "astro-icon": "^0.8.1",
-    "astro-robots-txt": "^0.5.0",
+    "astro-robots-txt": "^1.0.0",
     "commitlint": "^17.7.1",
     "cz-git": "^1.7.1",
     "czg": "^1.7.1",
-    "eslint": "^8.47.0",
+    "eslint": "^8.49.0",
     "jsdom": "^22.1.0",
     "less": "^4.2.0",
-    "lint-staged": "^14.0.0",
-    "postcss-preset-env": "^9.1.1",
-    "sass": "^1.65.1",
+    "lint-staged": "^14.0.1",
+    "postcss-preset-env": "^9.1.4",
+    "sass": "^1.67.0",
     "simple-git-hooks": "^2.9.0",
     "taze": "^0.11.2",
-    "typescript": "^5.1.6",
-    "unocss": "^0.55.0",
+    "typescript": "^5.2.2",
+    "unocss": "^0.55.7",
     "unocss-preset-extra": "^0.5.2",
     "unocss-preset-scrollbar": "^0.2.1",
     "unplugin-auto-import": "^0.16.6",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vitest": "^0.34.1",
-    "vue-tsc": "^1.8.8"
+    "vitest": "^0.34.4",
+    "vue-tsc": "^1.8.11"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged && pnpm type:check"
