--- a/package.json
+++ b/package.json
@@ -20,44 +20,44 @@
     "postinstall": "npx simple-git-hooks"
   },
   "dependencies": {
-    "@astrojs/solid-js": "^3.0.1",
-    "@astrojs/vue": "^3.0.0",
-    "@unocss/reset": "^0.55.7",
-    "astro": "^3.1.0",
-    "vue": "^3.3.4"
+    "@astrojs/solid-js": "^3.0.3",
+    "@astrojs/vue": "^4.0.6",
+    "@unocss/reset": "^0.58.2",
+    "astro": "^4.0.8",
+    "vue": "^3.3.13"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "0.43.0-beta.0",
-    "@astrojs/netlify": "^3.0.1",
-    "@astrojs/node": "^6.0.0",
-    "@astrojs/sitemap": "^3.0.0",
-    "@astrojs/vercel": "^5.0.0",
+    "@antfu/eslint-config": "2.6.1",
+    "@astrojs/netlify": "^4.0.1",
+    "@astrojs/node": "^7.0.3",
+    "@astrojs/sitemap": "^3.0.4",
+    "@astrojs/vercel": "^6.1.1",
     "@eiog/eslint-config-ts": "^0.0.2",
-    "@vite-pwa/astro": "^0.1.3",
-    "@vitest/ui": "^0.34.4",
-    "@vue/test-utils": "^2.4.1",
+    "@vite-pwa/astro": "^0.2.0",
+    "@vitest/ui": "^1.1.0",
+    "@vue/test-utils": "^2.4.3",
     "astro-i18next": "1.0.0-beta.21",
-    "astro-icon": "^0.8.1",
+    "astro-icon": "^1.0.0",
     "astro-robots-txt": "^1.0.0",
-    "commitlint": "^17.7.1",
-    "cz-git": "^1.7.1",
-    "czg": "^1.7.1",
-    "eslint": "^8.49.0",
-    "jsdom": "^22.1.0",
+    "commitlint": "^18.4.3",
+    "cz-git": "^1.8.0",
+    "czg": "^1.8.0",
+    "eslint": "^8.56.0",
+    "jsdom": "^23.0.1",
     "less": "^4.2.0",
-    "lint-staged": "^14.0.1",
-    "postcss-preset-env": "^9.1.4",
-    "sass": "^1.67.0",
+    "lint-staged": "^15.2.0",
+    "postcss-preset-env": "^9.3.0",
+    "sass": "^1.69.5",
     "simple-git-hooks": "^2.9.0",
-    "taze": "^0.11.2",
-    "typescript": "^5.2.2",
-    "unocss": "^0.55.7",
-    "unocss-preset-extra": "^0.5.2",
-    "unocss-preset-scrollbar": "^0.2.1",
-    "unplugin-auto-import": "^0.16.6",
+    "taze": "^0.13.1",
+    "typescript": "^5.3.3",
+    "unocss": "^0.58.2",
+    "unocss-preset-extra": "^0.5.3",
+    "unocss-preset-scrollbar": "^0.3.0",
+    "unplugin-auto-import": "^0.17.3",
     "vite-plugin-svg-icons": "^2.0.1",
-    "vitest": "^0.34.4",
-    "vue-tsc": "^1.8.11"
+    "vitest": "^1.1.0",
+    "vue-tsc": "^1.8.27"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged && pnpm type:check"
